--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation 'com.amazonaws:aws-android-sdk-ddb-mapper:2.6.+'
+
+    // or, for Android:
+    implementation 'com.google.guava:guava:23.3-android'
 }
