--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -28,20 +29,14 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-<<<<<<< HEAD
+  
+
+
 
     implementation 'com.amazonaws:aws-android-sdk-ddb-mapper:2.6.+'
 
-    // or, for Android:
 
     implementation ('com.amazonaws:aws-android-sdk-mobile-client:2.6.7@aar') { transitive = true; }
-=======
-    implementation 'com.amazonaws:aws-android-sdk-ddb-mapper:2.6.+'
-    compile ('com.amazonaws:aws-android-sdk-mobile-client:2.6.7@aar') { transitive = true; }
->>>>>>> Database
-
-    // or, for Android:
 
     implementation 'com.google.guava:guava:23.3-android'
 
