--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,5 +42,6 @@ dependencies {
     // or, for Android:
 
     implementation 'com.google.guava:guava:23.3-android'
+    compile 'com.squareup.okhttp3:okhttp:3.6.0'
 
 }
