Integrated MVP with session questions fragment and left with a bit to touch up

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".UI.Login.LoginActivity"
+            android:name=".UI.Session.SessionActivity"
             android:theme="@style/AppTheme.NoActionBar">
 
         </activity>
