--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,9 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+    configurations.all {
+        resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -29,20 +32,13 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-<<<<<<< HEAD
 
-    implementation 'com.amazonaws:aws-android-sdk-ddb-mapper:2.6.+'
-
-    // or, for Android:
-
-    implementation ('com.amazonaws:aws-android-sdk-mobile-client:2.6.7@aar') { transitive = true; }
-=======
     implementation 'com.amazonaws:aws-android-sdk-ddb-mapper:2.6.+'
     compile ('com.amazonaws:aws-android-sdk-mobile-client:2.6.7@aar') { transitive = true; }
->>>>>>> Database
 
     // or, for Android:
 
     implementation 'com.google.guava:guava:23.3-android'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
 
 }
