--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,12 +31,12 @@ dependencies {
     implementation 'com.android.support:support-v4:26.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
-
-
+    implementation 'com.google.guava:guava:23.3-android'
 
     implementation 'com.amazonaws:aws-android-sdk-ddb-mapper:2.6.+'
     implementation 'com.google.android.gms:play-services-auth:11.6.0'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
     implementation 'com.squareup.okhttp3:okhttp:3.6.0'
+    implementation ('com.amazonaws:aws-android-sdk-mobile-client:2.6.7@aar') { transitive = true; }
 
 }
