--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,12 @@
 
         </activity>
 
+        <activity
+            android:name=".UI.Course.FAQ.addEditFaq.AddEditFaqActivity"
+            android:label="Add FAQ">
+
+        </activity>
+
     </application>
 
 </manifest>
