--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
+
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -14,12 +15,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity
-            android:name=".UI.Session.SessionActivity"
-            android:label="@string/title_activity_session"
-            android:theme="@style/AppTheme.NoActionBar">
+        <!--<activity-->
+            <!--android:name=".UI.Session.SessionActivity"-->
+            <!--android:label="@string/title_activity_session"-->
+            <!--android:theme="@style/AppTheme.NoActionBar">-->
 
-        </activity>
+        <!--</activity>-->
 
 
         <activity
@@ -38,6 +39,7 @@
             android:label="Add FAQ">
 
         </activity>
+
         <activity
             android:name=".UI.Course.FAQ.CourseActivity"
             android:label="Add FAQ">
@@ -52,7 +54,6 @@
 
 
     </application>
-
 
 
 </manifest>
