Added eg of data adder

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,27 +12,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <activity
-            android:name=".UI.Course.FAQ.CourseActivity"
         <activity
             android:name=".UI.Session.SessionActivity"
             android:label="@string/title_activity_session"
-            android:theme="@style/AppTheme.NoActionBar" >
-        </activity>
-
-        <activity
-            android:name=".UI.Login.LoginActivity"
             android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
+            android:name=".UI.Login.LoginActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
             android:name=".UI.Course.FAQ.addEditFaq.AddEditFaqActivity"
-            android:label="Add FAQ" ></activity>
+            android:label="Add FAQ" />
         <activity
             android:name=".UI.Course.FAQ.CourseActivity"
-            android:label="Add FAQ">
-
-        </activity>
-
+            android:label="Add FAQ"></activity>
         <activity
             android:name=".UI.Dashboard.DashboardActivity"
             android:label="Add FAQ" />
@@ -42,10 +34,11 @@
             android:label="Add FAQ">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <activity android:name=".UI.DataAdder.AddDatahere"></activity>
     </application>
 
 </manifest>
