--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,17 +33,19 @@
             android:label="Add FAQ" />
         <activity android:name=".UI.QuizSession.QuizActivity" />
         <activity
-            android:name=".UI.ProfSession.ProfSessionActivity" />
-
-
-        <activity
-            android:name=".UI.Login.LoginActivity"
-            android:label="Add FAQ">
+            android:name=".UI.ProfSession.ProfSessionActivity" >
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+        </activity>
+
+
+        <activity
+            android:name=".UI.Login.LoginActivity"
+            android:label="Add FAQ">
 
         </activity>
         <activity android:name=".UI.DataAdder.AddDatahere">
