halfwaythrough making the progress for prof

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,28 +13,28 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity
-            android:name=".UI.Session.Main.SessionActivity"
-            android:label="@string/title_activity_session"
-            android:theme="@style/AppTheme.NoActionBar">
+        <!--<activity-->
+            <!--android:name=".UI.Session.Main.SessionActivity"-->
+            <!--android:label="@string/title_activity_session"-->
+            <!--android:theme="@style/AppTheme.NoActionBar">-->
 
-        </activity>
+        <!--</activity>-->
 
-        <activity
-            android:name=".UI.Course.FAQ.addEditFaq.AddEditFaqActivity"
-            android:label="Add FAQ" />
+        <!--<activity-->
+            <!--android:name=".UI.Course.FAQ.addEditFaq.AddEditFaqActivity"-->
+            <!--android:label="Add FAQ" />-->
 
-        <activity
-            android:name=".UI.Course.FAQ.CourseActivity"
-            android:label="Add FAQ">
+        <!--<activity-->
+            <!--android:name=".UI.Course.FAQ.CourseActivity"-->
+            <!--android:label="Add FAQ">-->
 
-        </activity>
+        <!--</activity>-->
+        <!--<activity-->
+            <!--android:name=".UI.Dashboard.DashboardActivity"-->
+            <!--android:label="Add FAQ" />-->
+        <!--<activity android:name=".UI.QuizSession.QuizActivity" />-->
         <activity
-            android:name=".UI.Dashboard.DashboardActivity"
-            android:label="Add FAQ" />
-        <activity android:name=".UI.QuizSession.QuizActivity" />
-        <activity
-            android:name=".UI.ProfSession.ProfSessionActivity" >
+            android:name=".UI.Course.FAQ.CourseActivity" >
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
