--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,50 +12,29 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-<<<<<<< HEAD
 
-        <!--<activity-->
-            <!--android:name=".UI.Session.Main.SessionActivity"-->
-            <!--android:label="@string/title_activity_session"-->
-            <!--android:theme="@style/AppTheme.NoActionBar">-->
-
-        <!--</activity>-->
-
-        <!--<activity-->
-            <!--android:name=".UI.Course.FAQ.addEditFaq.AddEditFaqActivity"-->
-            <!--android:label="Add FAQ" />-->
-
-        <!--<activity-->
-            <!--android:name=".UI.Course.FAQ.CourseActivity"-->
-            <!--android:label="Add FAQ">-->
-
-        <!--</activity>-->
-        <!--<activity-->
-            <!--android:name=".UI.Dashboard.DashboardActivity"-->
-            <!--android:label="Add FAQ" />-->
-        <!--<activity android:name=".UI.QuizSession.QuizActivity" />-->
-        <activity
-            android:name=".UI.Course.FAQ.CourseActivity" >
-=======
         <activity
             android:name=".UI.Session.Main.SessionActivity"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:label="@string/title_activity_session"
+            android:theme="@style/AppTheme.NoActionBar">
+
+        </activity>
+
         <activity
             android:name=".UI.Course.FAQ.addEditFaq.AddEditFaqActivity"
             android:label="Add FAQ" />
+
         <activity
             android:name=".UI.Course.FAQ.CourseActivity"
-            android:label="Add FAQ" />
+            android:label="Add FAQ">
+
+        </activity>
         <activity
             android:name=".UI.Dashboard.DashboardActivity"
             android:label="Add FAQ" />
         <activity android:name=".UI.QuizSession.QuizActivity" />
-
         <activity
-            android:name=".UI.Login.LoginActivity"
-            android:label="Add FAQ">
->>>>>>> 163fb8b6167936199947d4d3ada013cc817a2540
-
+            android:name=".UI.Login.LoginActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
