--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,16 @@
             android:label="Add FAQ" />
          <activity
          android:name=".UI.Course.FAQ.CourseActivity"
-         android:label="Add FAQ" />
+             android:label="Add FAQ" >
+
+             <intent-filter>
+                 <action android:name="android.intent.action.MAIN" />
+
+                 <category android:name="android.intent.category.LAUNCHER" />
+             </intent-filter>
+
+         </activity>
+
          <activity
          android:name=".UI.Dashboard.DashboardActivity"
          android:label="Add FAQ" />
@@ -30,17 +39,15 @@
         <activity
             android:name=".UI.Login.LoginActivity"
             android:label="Add FAQ">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
         <activity
             android:name=".UI.Course.FAQ.ProfessorProgressActivity"
             android:label="@string/title_activity_professor_progress_fragment"
             android:theme="@style/AppTheme"></activity>
+
+
         <activity android:name=".UI.DataAdder.AddDatahere">
 
         </activity>
