--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,14 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        multiDexEnabled true
+//        multiDexEnabled true
+    }
+    configurations.all {
+        resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
+    }
+    dexOptions {
+        preDexLibraries = false
+        javaMaxHeapSize "4g" // 2g should be also OK
     }
     buildTypes {
         release {
@@ -25,16 +32,6 @@ configurations.all {
 }
 
 
-
-
-
-
-
-
-
-
-
-
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.1.0'
@@ -44,7 +41,6 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'com.android.support:support-v4:27.1.0'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
     implementation 'com.google.guava:guava:23.3-android'
     implementation 'com.amazonaws:aws-android-sdk-ddb-mapper:2.6.+'
     implementation 'com.google.android.gms:play-services-auth:11.6.0'
@@ -57,11 +53,10 @@ dependencies {
     testImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-
+//
     androidTestImplementation 'com.android.support:support-annotations:23.1.0'
     androidTestImplementation 'com.android.support.test:runner:0.4.1'
     androidTestImplementation 'com.android.support.test:rules:0.4.1'
 
-    androidTestCompile 'com.google.code.findbugs:jsr305:3.0.1'
+    androidTestImplementation 'com.google.code.findbugs:jsr305:3.0.1'
 }
