--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,10 @@ dependencies {
     androidTestImplementation 'com.android.support.test:rules:0.4.1'
 
     androidTestCompile 'com.google.code.findbugs:jsr305:3.0.1'
+
+    implementation "android.arch.persistence.room:runtime:1.0.0"
+    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
+
+    testCompile 'org.mockito:mockito-core:2.7.22'
+    testCompile 'commons-logging:commons-logging:1.1.1'
 }
