--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,10 +25,13 @@
             android:name=".UI.Dashboard.main.DashboardActivity"
             android:label="Add FAQ" />
         <activity android:name=".UI.QuizSession.QuizActivity" />
+        <activity android:name=".UI.Login.LoginActivity" />
+        <activity android:name=".UI.SignUp.SignupActivity" />
+
 
         <activity
-            android:name=".UI.Login.LoginActivity"
-            android:label="Add FAQ">
+            android:name=".UI.Welcome.WelcomeActivity"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
