--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,12 +29,12 @@
         <activity android:name=".UI.SignUp.SignupActivity" />
 
 
-        <activity
-            android:name=".UI.Welcome.WelcomeActivity"
-            >
+        <!--<activity-->
+            <!--android:name=".UI.Welcome.WelcomeActivity"-->
+            <!--&gt;-->
 
-        </activity>
-        <activity android:name=".UI.DataAdder.AddDatahere">
+        <!--</activity>-->
+        <activity android:name=".UI.Welcome.WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
